--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,14 @@ body {
 #map,
 body,
 html {
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
+  /* -webkit-filter: grayscale(100%);
+  filter: grayscale(100%); */
   height: 100%;
+}
+.legend {
+  padding: 6px 6px;
+  font: 14px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255, 255, 255, 0.8);
+  line-height: 24px;
 }
